# SmartEvalAI

./: .gitignore  README.md  pyproject.toml
alembic/: env.py
alembic/versions/: 07059ae394ef_create_initial_tables.py  931ace5e2963_add_question_number_to_question.py
src/smartevalai/: main.py
src/smartevalai/api/v1/: auth.py  exams.py  reports.py  submissions.py
src/smartevalai/core/: config.py  deps.py  logging.py  security.py
src/smartevalai/db/: session.py
src/smartevalai/models/: __init__.py  exam.py  submission.py  user.py
src/smartevalai/schemas/: auth.py  exam.py  submission.py
src/smartevalai/services/: analytics_service.py  auth_service.py  exam_service.py  report_service.py  submission_service.py
src/smartevalai/services/ai/: evaluator.py  gemini_client.py  prompts.py
src/smartevalai/services/evaluation/: scoring.py  similarity.py
src/smartevalai/services/ocr/: engine.py  file_utils.py  pdf_converter.py  pipeline.py  preprocessing.py  text_processing.py
src/smartevalai/templates/: base.html  login.html  register.html  student_dashboard.html  teacher_dashboard.html
src/smartevalai/utils/: storage.py
tests/: conftest.py
tests/integration/: test_auth_api.py  test_exam_api.py
tests/unit/: test_auth_service.py  test_similarity.py  test_text_processing.py
